--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "style-loader": "^0.18.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "file-loader": "^0.11.2",
+    "postcss-loader": "^2.0.6",
+    "url-loader": "^0.5.9"
   }
 }
