--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
   "name": "react-app",
   "version": "1.0.0",
-  "description": "React App Skeleton",
+  "description": "React Mobx Todolist ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --content-base public/ --open",
-    "build": "webpack -w"
+    "start": "webpack-dev-server --content-base public/ --open --mode=development",
+    "build": "webpack -w --mode=production"
   },
   "author": "Julio Vásconez",
   "license": "MIT",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "16.3.2",
+    "react-dom": "16.3.2"
   },
   "devDependencies": {
-    "style-loader": "^0.18.2",
-    "babel": "^6.23.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "file-loader": "^0.11.2",
-    "postcss-loader": "^2.0.6",
-    "url-loader": "^0.5.9"
+    "babel": "6.23.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "2.1.4",
+    "sass-loader": "^7.0.1",
+    "style-loader": "0.21.0",
+    "url-loader": "1.0.1",
+    "webpack": "^4.6.0"
   }
 }
