--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --content-base public/ --open --mode=development",
-    "build": "webpack -w --mode=production"
+    "build": "webpack --mode=production"
   },
   "author": "Julio Vásconez",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   }
 }
